[package]
name = "rsomics-bed-shuffle"
version = "0.1.2"
description = "Randomly relocate BED intervals within a genome — bedtools shuffle equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed-shuffle"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed", "shuffle", "bedtools", "bioinformatics", "genomics"]
readme = "README.md"

[[bin]]
name = "rsomics-bed-shuffle"
path = "src/main.rs"

[lib]
name = "rsomics_bed_shuffle"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
